operator/pkg/gateway-api/testdata/gateway/grpcroute-header-matching/input/grpcroute-header-matching.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-header-matching
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    # Matches "version: one"
    - matches:
        - headers:
            - name: version
              value: one
      backendRefs:
        - name: grpc-infra-backend-v1
          port: 8080
    # Matches "version: two"
    - matches:
        - headers:
            - name: version
              value: two
      backendRefs:
        - name: grpc-infra-backend-v2
          port: 8080
    # Matches "version: two" AND "color: orange"
    - matches:
        - headers:
            - name: version
              value: two
            - name: color
              value: orange
      backendRefs:
        - name: grpc-infra-backend-v1
          port: 8080
    # Matches "color: blue" OR "color: green"
    - matches:
        - headers:
            - name: color
              value: blue
        - headers:
            - name: color
              value: green
      backendRefs:
        - name: grpc-infra-backend-v1
          port: 8080
    # Matches "color: red" OR "color: yellow"
    - matches:
        - headers:
            - name: color
              value: red
        - headers:
            - name: color
              value: yellow
      backendRefs:
        - name: grpc-infra-backend-v2
          port: 8080
